--- a/src/Components/Signin/Signin.css
+++ b/src/Components/Signin/Signin.css
@@ -37,3 +37,69 @@
     background: radial-gradient(#44006b, #ad1fff);
     overflow: hidden;
 }
+
+.login-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.content-left {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.content-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.login-form {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 10px;
+    background: white;
+    opacity: 0.7;
+}
+
+.login-text {
+    padding: 0px 8vw 0px 3vw;
+}
+
+.login-text h3 {
+    color: hsl(218, 81%, 95%);
+    font-size: 40px;
+}
+
+.login-text h2 {
+    color: hsl(218, 81%, 75%);
+    font-size: 40px;
+    padding-bottom: 5vh;
+}
+
+.login-text p {
+    text-align: justify;
+    font-size: 18px;
+    color: hsl(218, 81%, 85%)
+}
+
+
+.form-controls {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.form-controls h4{
+    cursor: pointer;
+}
