--- a/src/Components/Signin/Signin.css
+++ b/src/Components/Signin/Signin.css
@@ -60,9 +60,6 @@
 
 .login-form {
     width: 70%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     padding: 15px;
     border-radius: 10px;
@@ -101,5 +98,30 @@
 }
 
 .form-controls h4{
+    cursor: pointer;
+}
+
+.login-bar {
+    width: 100%;
+    margin-top: 2%;
+}
+
+.login-bar p {
+    width: "100%";
+    padding-left: 2%;
+    padding-right: 2%;
+    font-weight: 900;
+}
+
+.social-login  {
+    padding-top: 2%;
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2%;
+}
+
+.social-login i {
+    font-size: 25px;
     cursor: pointer;
 }
